# graphix

./: .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  MERGE_MSG  NOTICE  README.md  TN-MBQC.py  noxfile.py  parameterised_measurement_demo.ipynb  pyproject.toml  pyright_output.txt  pytest.ini  requirements-dev.txt  requirements-doc.txt  requirements-extra.txt  requirements-no-deps.txt  requirements-typing.txt  requirements.txt  setup.py  test_pretty_print.ipynb  tox.ini  vqe.py
.github/: dependabot.yml  pull_request_template.md  uv-requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/setup-uv/: action.yml
.github/workflows/: black.yml  ci-benchmark.yml  ci.yml  cov.yml  doc.yml  isort.yml  lint.yml  lockfile.yml  pre-commit-autoupdate.yml  pre-commit.yml  pydoclint.yml  release.yml  ruff.yml  typecheck.yml
asv_benchmarks/: .gitignore  README.md  asv.conf.json
asv_benchmarks/benchmarks/: __init__.py  bench_opengraph.py  bench_pattern.py  common.py
benchmarks/: benchmark_mqtbench.py  efficient_contraction_order_statevec.py  graphsim.py  readme.rst  requirements.txt  statevec.py  sv_plot.py  svbenchmark.py
docs/: Makefile  make.bat  requirements.txt
docs/logo/: graphix-logo.pptx
docs/source/: algorithms.rst  benchmarks.rst  channels.rst  clifford.rst  conf.py  contributing.rst  data.rst  device_interface.rst  extraction.rst  flow.rst  generator.rst  graphsim.rst  index.rst  intro.rst  lc-mbqc.rst  miscellaneous.rst  modifier.rst  open_graph.rst  optimization.rst  quickstart.rst  random_objects.rst  references.rst  sg_execution_times.rst  simulator.rst  stabilizer.rst  tutorial.rst  visualization.rst  why-lcmbqc.rst
docs/source/_static/css/: custom.css  my_theme.css
docs/source/benchmarks/: index.rst  sg_execution_times.rst  statevec.ipynb  statevec.py  statevec.py.md5  statevec.rst  statevec_codeobj.pickle
examples/: Demo-QNN.ipynb  MBQCvqe.py  Resource_state.py  compare_viz.py  deutsch-jozsa.py  deutsch_jozsa.py  dm_backend.py  eco_statevec.py  extraction.py  fusion_extraction.py  ghz_with_tn.py  interactive_viz_demo.py  interactive_viz_qaoa.py  mbqc_vqe.py  noisy_mbqc.py  pattern_fragments.py  postselected_measurement.py  qaoa.py  qft.py  qft_with_mps.py  qft_with_tn.py  qnn.py  readme.rst  resource-state.py  resource_state.py  rotation.py  tn_simulation.py  visualization.py
graphix/: __init__.py  _db.py  _linalg.py  branch_selector.py  channels.py  checks.py  client.py  clifford.py  command.py  device_backend.py  device_interface.py  draw_pattern.py  executor.py  extraction.py  find_pflow.py  fundamentals.py  generator.py  gf2_linalg.py  gflow.py  gflow_shim.py  graphsim.py  instruction.py  kraus.py  linalg.py  linalg_validations.py  measurements.py  mgraph.py  mpssim.py  open_graph.py  opengraph.py  opengraph_.py  ops.py  optimization.py  parameter.py  pattern.py  pauli.py  pretty_print.py  pyzx.py  qasm3_exporter.py  random_objects.py  (+15 more)
graphix/Checks/: channel_checks.py  generic_checks.py
graphix/circ_ext/: __init__.py  compilation.py  extraction.py
graphix/exe/: ibmq.py
graphix/flow/: __init__.py  _find_cflow.py  _find_gpflow.py  _find_pflow.py  _partial_order.py  core.py  exceptions.py  flow.py  utils.py  visualization.py
graphix/graphsim/: __init__.py  basegraphstate.py  graphstate.py  nx_graphstate.py  nxgraphstate.py  rx_graphstate.py  rxgraphstate.py  rxgraphviews.py  utils.py
graphix/noise_models/: __init__.py  amplitude_damping.py  base_noise_model.py  depolarising.py  depolarising_noise_model.py  noise_model.py  noiseless_noise_model.py  test_noise_model.py
graphix/sim/: __init__.py  backend.py  base_backend.py  data.py  density_matrix.py  graphix.code-workspace  mps.py  statevec.py  statevec_oracle.py  tensornet.py
graphix/sim/backend/: abstract_backend.py  numpy_backend.py
graphix/sim/backends/: abstract_backend.py  backend_factory.py  jax_backend.py  numpy_backend.py  settings.py
stubs/cotengra/: __init__.pyi  oe.pyi
stubs/networkx/: __init__.pyi
stubs/numba/: __init__.pyi
stubs/pytest_benchmark/: __init__.pyi
stubs/quimb/: __init__.pyi
stubs/quimb/tensor/: __init__.pyi
tests/: conftest.py  manual_test_mgraph.py  random_circuit.py  random_objects.py  test_amplitude_damping.py  test_branch_selector.py  test_circ_extraction.py  test_client.py  test_clifford.py  test_command.py  test_db.py  test_density_matrix.py  test_device_interface.py  test_empty_graph_fix.py  test_extraction.py  test_find_pflow.py  test_flow.py  test_flow_core.py  test_flow_find_gpflow.py  test_fundamentals.py  test_generator.py  test_gf2_linalg.py  test_gflow.py  test_graphsim.py  test_issue_531.py  test_kraus.py  test_linalg.py  test_measurements.py  test_mpssim.py  test_noise_model.py  test_noisy_amplitude_damping_density_matrix.py  test_noisy_density_matrix.py  test_open_graph.py  test_opengraph.py  test_opengraph_.py  test_optimization.py  test_parameter.py  test_pattern.py  test_pattern_delegated.py  test_pauli.py  (+22 more)
